# usaco-problems2

./: .gitignore  LICENSE  README.md
.github/workflows/: fetch.yaml  generate_markdown.yaml
USACO/: README.md  _template.cpp  _template.java  _template.py
USACO/2015dec/Bronze/: 1.cpp  1.py  2.cpp  2.py  3.cpp  3.py  ContaminatedMilk.java  FencePainting.java  SpeedingTicket.java
USACO/2015dec/Gold/: 1.cpp  1.py  2.cpp  2.py  3.cpp  3.py  BessiesDream.java  FruitFeast.java  HighCardLowCardGold.java
USACO/2015dec/Platinum/: 1.cpp  1.py  2.cpp  2.py  3.cpp  3.py  CountingHaybales.java  HighCardLowCardPlatinum.java  MaxFlow.java
USACO/2015dec/Silver/: 1.cpp  1.py  2.cpp  2.py  3.cpp  3.py  BreedCounting.java  HighCardWins.java  SwitchingontheLights.java
USACO/2015feb/Bronze/: 1.cpp  1.py  2.cpp  2.py  3.cpp  3.py  COW.java  CensoringBronze.java  CowHopscotchBronze.java
USACO/2015feb/Gold/: 1.cpp  1.py  2.cpp  2.py  3.cpp  3.py  CensoringGold.java  CowHopscotchGold.java  FencingtheHerd.java
USACO/2015feb/Silver/: 1.cpp  1.py  2.cpp  2.py  3.cpp  3.py  CensoringSilver.java  CowHopscotchSilver.java  Superbull.java
USACO/2015jan/Bronze/: 1.cpp  1.py  2.cpp  2.py  3.cpp  3.py  4.cpp  4.py  CowRouting.java  CowRoutingII.java  ItsAllAbouttheBase.java  MeetingTime.java
USACO/2015jan/Gold/: 1.cpp  1.py  2.cpp  2.py  3.cpp  3.py  CowRectangles.java  (+2 more)
_scraper/: README.md  pyproject.toml
_scraper/data/: USACO.json
_scraper/src/: USACO_common.py  USACO_markdown_generator.py  USACO_scraper.py  USACO_templator.py  markdown_generator.py  scraper.py  templator.py
(+1116 files in other folders)
